[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leona"
version = "0.1.0"
description = "Perceptually uniform, colorblind-safe colormaps extracted from the Renaissance"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tuomo" }]
keywords = ["colormap", "matplotlib", "palette", "visualization", "colorblind", "viridis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]
dependencies = [
    "numpy",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
preview = ["scipy"]

[project.urls]
Homepage = "https://github.com/yuj1r0/leona"
Source = "https://github.com/yuj1r0/leona"

[tool.setuptools]
packages = ["leona"]
